# ChangeLog for sys-devel/gcc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.890 2012/07/23 16:13:51 vapier Exp $

  30 Aug 2012; Fabian Groffen <grobian@gentoo.org> gcc-4.6.3.ebuild:
  Remove coldfire patch from 4.6.3 by Alan Hourihane, bug #433369

  15 Aug 2012; Fabian Groffen <grobian@gentoo.org> gcc-4.2.4-r01.4.ebuild:
  Extend Solaris GNU ld target fix to sparc targets for sparcv9-solaris

  11 Aug 2012; Fabian Groffen <grobian@gentoo.org> gcc-4.1.2.ebuild:
  backport >=binutils-2.21 backport from 4.2 (4.5) to 4.1

  11 Aug 2012; Fabian Groffen <grobian@gentoo.org>
  +files/4.2.2/solarisx86.patch, gcc-4.2.4-r01.4.ebuild:
  Add patch to fix configuring on Solaris x86 working around a weird shell
  quirk, bug #416577

  01 Aug 2012; Fabian Groffen <grobian@gentoo.org> +files/4.7.1,
  +files/4.7.1/solaris-searchpath.patch, -gcc-4.7.0.ebuild, gcc-4.7.1.ebuild:
  Fix unpack of gcc-4.7.1, update Solaris searchpath patch

  23 Jul 2012; Mike Frysinger <vapier@gentoo.org> gcc-4.6.3.ebuild,
  gcc-4.7.1.ebuild:
  Drop -Werror while building go #423153 by Tiziano Müller.

  23 Jul 2012; Mike Frysinger <vapier@gentoo.org> gcc-3.3.6-r1.ebuild:
  Fix building with newer glibc and siginfo changes #427220 by Martin Jansa.

  23 Jul 2012; Mike Frysinger <vapier@gentoo.org> gcc-4.7.1.ebuild:
  Fix for building libitm on x86 #421305 by Rafał Mużyło.

  23 Jul 2012; Mike Frysinger <vapier@gentoo.org> gcc-4.6.3.ebuild:
  Fix building with glibc-2.16 #424970 by Chris Smith.

*gcc-4.5.4 (15 Jul 2012)

  15 Jul 2012; Ryan Hill <dirtyepic@gentoo.org> +gcc-4.5.4.ebuild:
  Version bump.

  28 Jun 2012; Anthony G. Basile <blueness@gentoo.org> gcc-4.6.3.ebuild:
  PIE and SSP work on mips glibc systems, tested on lemote yeeloong

*gcc-4.7.1 (15 Jun 2012)

  15 Jun 2012; Ryan Hill <dirtyepic@gentoo.org> +gcc-4.7.1.ebuild:
  Version bump.

  04 Jun 2012; Magnus Granberg <zorry@gentoo.org> gcc-4.6.3.ebuild: