@@ -44,6 +44,14 @@ src_unpack() {
 		ewarn "Please rebuild gcc after upgrading to >=glibc-2.12 #362315"
 		EPATCH_EXCLUDE+=" 10_all_default-fortify-source.patch"
 	fi
+	# Fedora/RedHat ships glibc-2.15+ with some nasty warnings that cause
+	# configure checks for most system headers to fail, resulting in bugs
+	# compiling e.g. gcc itself, bug #433333
+	if [[ -e /usr/include/features.h ]] ; then
+		grep -qF "_FORTIFY_SOURCE requires compiling with optimization" \
+			/usr/include/features.h && \
+				EPATCH_EXCLUDE+=" 10_all_default-fortify-source.patch"
+	fi
 
 	toolchain_src_unpack
 
