@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.890 2012/07/23 16:13:51 vapier Exp $
 
+  02 Sep 2012; Fabian Groffen <grobian@gentoo.org> gcc-4.6.3.ebuild,
+  gcc-4.7.1.ebuild:
+  Disable default fortify-source when glibc's features.h generates warnings when
+  this isn't used with optimisation (Such as on Fedora 17), bug #433333
+
   30 Aug 2012; Fabian Groffen <grobian@gentoo.org> gcc-4.6.3.ebuild:
   Remove coldfire patch from 4.6.3 by Alan Hourihane, bug #433369
 
